final mod on z-index to fix overlap of navBar

--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -146,6 +146,11 @@ svg {
 width: 100%;
 height: 100%;
 transform: scale(1.5);
+z-index: 0;
+}
+
+.navBar {
+z-index: 1;
 }
 
 #rain-left {
